deploy/overlays/dev/web.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  annotations:
    argocd.argoproj.io/sync-wave: "5"
    argocd.argoproj.io/sync-options: Replace=true
spec:
  replicas: 2
  revisionHistoryLimit: 5
